# CerberusChain

./: .gitignore  README-LOCAL.md  alternative-deploy.ps1  animations.css  check-env.ps1  check-final-env.ps1  create-project-structure-safe.ps1  create-project-structure.ps1  deploy-commands.txt  deploy-easy.ps1  deploy-with-passphrase.ps1  deploy.ps1  diagnose-connection-issue.ps1  fix-connection-now.ps1  fix-connection-pool-timeout.ps1  fix-connection-timeout.ps1  fix-database-connection-final.ps1  fix-dns-and-connection-v2.ps1  fix-dns-and-connection.ps1  fix-dns-and-test.ps1  fix-network-final.ps1  fix-network-issues.ps1  fix-ssh-agent.ps1  fix-supabase-connection.ps1  fix-supabase-directly.ps1  fix-with-existing-password.ps1  get-supabase-password-and-fix.ps1  get-supabase-password.ps1  index.html  quick-deploy-commands.txt  quick-dns-fix-v2.ps1  quick-dns-fix.ps1  script.js  setup-complete-local.ps1  setup-database.ps1  setup-local-database-final.ps1  setup-local-database.ps1  setup-ssh-agent.ps1  simple-fix.ps1  simple-no-docker-setup.ps1  (+14 more)
CerberusChain/: carousel copy.css  carousel.css  index copy.html  index.html  script copy.js  script.js  style copy.css  style.css
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/handlers/: auth.rs  bots.rs  mod.rs  trades.rs  users.rs  wallets.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/config/: mod.rs
backend/src/database/: connection.rs  mod.rs  models.rs
backend/src/utils/: mod.rs
docs/: DATABASE_SETUP.md  DEVELOPMENT_ROADMAP.md  ENVIRONMENT_SETUP.md  PHASE_2_DETAILED.md  QUICK_START.md  SUPABASE_SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/auth/: AuthForms.css  AuthModal.css  AuthModal.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/dashboard/: UserDashboard.css  UserDashboard.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: supabase.ts
scripts/: check-progress.sh  check-readiness.ps1  dev.ps1  next-steps.ps1  setup.ps1  setup.sh
scripts/database/: setup-docker.ps1  setup.ps1
supabase/migrations/: 20250620232224_damp_beacon.sql  20250621000818_azure_silence.sql  20250621190038_odd_silence.sql
