[package]
name = "cerberus-hydra-backend"
version = "0.1.0"
edition = "2021"
authors = ["Tony <tony@cerberuschain.com>", "Dave <dave@cerberuschain.com>"]
description = "Cerberus Chain: Hydra - Advanced Solana Memecoin Trading Bot Backend"

[dependencies]
actix-web = "4.5"
actix-web-actors = "4.3"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database with PostgreSQL support (Supabase)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }

# Authentication and security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encryption for wallet private keys - Updated to compatible version
aes-gcm = "0.9"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"

# Solana SDK - Updated to compatible versions
solana-sdk = "1.16"
solana-client = "1.16"

# HTTP client and WebSocket
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.21"

# Configuration and logging
dotenv = "0.15"
config = "0.14"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.19"
lazy_static = "1.4"

# Decimal handling for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.9"
actix-test = "0.1"