[package]
name = "cerberus-hydra-backend"
version = "0.1.0"
edition = "2021"
authors = ["Tony <tony@cerberuschain.com>", "Dave <dave@cerberuschain.com>"]
description = "Cerberus Chain: Hydra - Advanced Solana Memecoin Trading Bot Backend"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database with SQLite support (NO NETWORK REQUIRED)
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Authentication and security
jsonwebtoken = "8.3"
argon2 = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encryption for wallet private keys
aes-gcm = "0.9"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Solana SDK (for when you're ready)
solana-sdk = "1.16"
solana-client = "1.16"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration and logging
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Decimal handling
rust_decimal = { version = "1.33", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.8"